# Case_Studies_Final_Proj

./: .gitignore  README.md  baseline_models.ipynb  build_full_db.sql  build_graph.py  build_training_tables.py  dataloader.py  graph_modeling.ipynb  main.py  migrate.py  model_wrapper.py  pyproject.toml  script.py  test.py
data_gathering/: build_graph.sql
data_modeling/: graph_model.md  initial_data_model.md
